--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -2,6 +2,4 @@
    @LAYOUT -> MAIN
    ====================================================================================== */
 
-.main {
-
-}
+.main {}
