moves deferred loading class to correct container
The container need to be the one with `overflow: scroll` on it,
otherwise the height calculations on the container are the whole
container rather than just the visible region, loading all images at the
begining.

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -43,8 +43,8 @@
     <%# //Filters & list/map toggle button %>
 
     <%# Stores list %>
-    <div class="stores-maps__list-detail" id="stores-maps-toggle-listing-detail">
-      <dl class="stores-list js-defer-image-load-container">
+    <div class="stores-maps__list-detail js-defer-image-load-container" id="stores-maps-toggle-listing-detail">
+      <dl class="stores-list">
         <% @stores.each do |letter, stores| %>
 
           <dt>
