--- a/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_map-micello.scss
@@ -131,6 +131,7 @@
       @include font-size($font-size-sml, $sledgehammer: !important);
       font-family: $font-family !important;
       line-height: 1.5 !important;
+      background-image: none !important;
 
       /* Map name */
       #ui-name {display: none !important;}
