--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -14,7 +14,7 @@
     </div>
 
     <h2 class="detail-view__hdr-sub hn">Event Details</h2>
-    <div class="detail-view__desc">
+    <div class="detail-view__desc txt-formatted txt-formatted--user-generated">
       <p itemprop="summary"><%= @event.description %></p>
       <div itemprop="description">
         <% @event.body.each do |paragraph| %>
