--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,6 +137,7 @@ Global stylesheet
 @import "partials/modules/stores-maps";
 @import "partials/modules/filters";
 @import "partials/modules/pill";
+@import "partials/modules/txt-formatted";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
