--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -87,6 +87,11 @@
       }
     }
 
+  /* Descriptions (user generated content) */
+  .detail-view__desc p {@extend %mrg-base;}
+
+    /* Fine print */
+    .detail-view__desc--fine-print {@include font-size($font-size-milli, 1.5);}
 }
 
   /* --Global-- */
@@ -104,7 +109,7 @@
   }
 
   .detail-view__hdr-sub {
-    @include font-size(18, 1.3);
+    @include font-size(18, 1.5);
     @include to-rem(margin-bottom, $spacing-half);
     color: $color-light-txt;
 
@@ -166,18 +171,6 @@
   .detail-view__mrg-half {@include to-rem(margin-bottom, $spacing-half);}
 
   .detail-view__mrg-off {margin-bottom: 0;}
-
-  /* Description */
-  .detail-view__desc p {
-    @include to-rem(margin-bottom, $spacing-half);
-    line-height: 1.6;
-
-    /* Turn off for last child */
-    &:last-child {margin-bottom: 0;}
-  }
-
-    /* Fine print */
-    .detail-view__desc--fine-print {@include font-size($font-size-milli, 1.5);}
 
   /* Subtle text */
   .detail-view__subtle-txt {color: $color-light-txt;}
