Changed price to sale_price

--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -12,7 +12,7 @@
     <h3 class="tile__meta__hdr"><%= result.name %></h3>
     <p class="tile__meta__desc">
       <span class="txt-break-word">from <strong><%= result.retail_chain_name %></strong></span>
-      <span class="tile__meta__price"><%=number_to_currency result.price %></span>
+      <span class="tile__meta__price"><%=number_to_currency result.sale_price %></span>
     </p>
   </div>
 </div>
