Changing colour of text selection CSS

--- a/app/assets/stylesheets/partials/base/_text-selection.scss
+++ b/app/assets/stylesheets/partials/base/_text-selection.scss
@@ -4,14 +4,14 @@
 
 /* Firefox */
 ::-moz-selection {
-	background: $color-brand;
+	background: $color-cta-blue;
 	color: #fff;
 	text-shadow: none;
 }
 
 /* Everyone else */
 ::selection {
-	background: $color-brand;
+	background: $color-cta-blue;
 	color: #fff;
 	text-shadow: none;
 }
