--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -40,7 +40,7 @@
     <div class="island island--center detail-view__divider--palm">
       <%= link_to @product.primary_retailer_product_url || '#',
         class: "btn btn--pointer btn--full btn--full-left btn--main btn--main-alt2 btn--main-lrg btn--main-flanked", rel: "external nofollow" do %>
-        Buy from <%= @product.retail_chain_name %>
+        <span class="txt-truncate">Buy from <%= @product.retail_chain_name %></span>
         <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
         <span class="icon icon--link icon--xlrg icon--flush-top btn--pointer__icon" aria-hidden="true"></span>
       <%- end -%>
