Remove unused class

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -263,7 +263,7 @@
   </div>
 </div>
 
-<div ng-cloak ng-controller="ProductsController" class="product-results">
+<div ng-cloak ng-controller="ProductsController">
   <div ng-if="!products.loaded">
     <span class="preloader preloader--light">
       <span class="preloader__spinner"></span>
