Use preloader--middle

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -265,7 +265,7 @@
 
 <div ng-cloak ng-controller="ProductsController">
   <div ng-if="!products.loaded">
-    <span class="preloader preloader--light">
+    <span class="preloader preloader--middle preloader--light">
       <span class="preloader__spinner"></span>
       <em class="hide-visually">Loading, please wait&#8230;</em>
     </span>
