--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -1,6 +1,12 @@
 <div class="tile__image">
   <% # TODO: fix alt tag %>
-  <%= image_tag result.primary_image, alt: result.title %>
+  <%= fetch_image_tag result.primary_image,
+    alt: result.title,
+    width: 576,
+    crop: :scale,
+    quality: 25,
+    effect: 'trim'
+  %>
 </div>
 
 <div class="tile__meta">
