--- a/app/views/layouts/_nav_contextual.html.erb
+++ b/app/views/layouts/_nav_contextual.html.erb
@@ -1,32 +1,30 @@
-<div class="nav-contextual">
-  <% # Canned search / contextual navigation disabled until the story is played %>
-  <!--
-    <div class="nav-contextual__clip">
-
-      <nav role="navigation" aria-label="Contextual navigation">
-        <ul class="nav-contextual__main-items horiz-list">
-          <li>
-            <a class="is-active" href="#">Women's Fashion</a>
-          </li>
-          <li>
-            <a href="#">Men's Fashion</a>
-          </li>
-          <li>
-            <a href="#">Kids</a>
-          </li>
-          <li>
-            <a href="#">Shoes</a>
-          </li>
-          <li>
-            <a href="#">Homewares</a>
-          </li>
-        </ul>
-      </nav>
-      <span class="nav-contextual__show-more icon icon--arrow-right icon--mega icon--flush-top" aria-hidden="true"></span>
-    </div>
-  -->
-
+<div class="container--width container--dark">
   <div class="container">
+    <div class="nav-contextual nav-contextual--dark">
+      <div class="nav-contextual__clip">
+        <nav role="navigation" aria-label="Contextual navigation">
+          <ul class="nav-contextual__main-items horiz-list">
+            <li>
+              <a class="is-active" href="#">Women's Fashion</a>
+            </li>
+            <li>
+              <a href="#">Men's Fashion</a>
+            </li>
+            <li>
+              <a href="#">Kids</a>
+            </li>
+            <li>
+              <a href="#">Shoes</a>
+            </li>
+            <li>
+              <a href="#">Homewares</a>
+            </li>
+          </ul>
+        </nav>
+        <span class="nav-contextual__show-more icon icon--arrow-right icon--mega icon--flush-top" aria-hidden="true"></span>
+      </div>
+    </div>
+
     <!-- Centre selector -->
     <div class="nav-contextual__centre-selector">
       <div class="nav-contextual__centre-selector-control" id="centre_selector">
