--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,11 @@
 	<!--[if lte IE 7]><p class="old-ie-notification">Apologies for the appearance of this page but you are viewing it in a very old browser that we no longer support. We highly recommend <a href="http://browsehappy.com/" rel="external">upgrading to a more modern browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true" rel="external">install Google Chrome Frame</a> to experience this site and to reap the many other benefits of using a modern browser.</p><![endif]-->
 
 	<%= render "/layouts/header" %>
-	<%= yield :nav_contextual %>
-	<main class="main container <%= yield(:class_for_main) %>" id="main" role="main">
-		<%= yield %>
+	<main class="main <%= yield(:class_for_main) %>" id="main" role="main">
+		<%= yield :nav_contextual %>
+		<div class="container">
+			<%= yield %>
+		</div>
 	</main>
 
 	<%= render "/shared/javascripts_global" %>
