Move centre selector as its own module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -138,6 +138,8 @@ Global stylesheet
 @import "partials/modules/filters";
 @import "partials/modules/pill";
 @import "partials/modules/txt-formatted";
+@import "partials/modules/nav-contextual";
+@import "partials/modules/centre-selector";
 
   /* Modules -> Widgets */
   @import "partials/modules/widgets/accordion";
