Changed scale to limit so we dont get huge speakers :)

--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -3,7 +3,7 @@
   <%= fetch_image_tag result.primary_image,
     alt: result.title,
     width: 576,
-    crop: :scale,
+    crop: :limit,
     quality: 25
   %>
 </div>
